fix html spacing, add radio button questions and a new card.

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,3 @@
   box-shadow: 0 4px 8px 0;
 }
 
-#formTwo {
-  display: none;
-}
-
